--- a/src/admin/templates/creditRequestList.tpl.html
+++ b/src/admin/templates/creditRequestList.tpl.html
@@ -9,38 +9,90 @@
             <li class="breadcrumb-item active" aria-current="page">Запросы кредитов</li>
         </ol>
     </nav>
+    <? 
+        if ($result->getCount() > 0) {
     
-    <? if ($list) { ?>
-    <div class="table-responsive">
-        <table class="table table-hover table-striped">
-        <thead>
-            <tr>
-                <th scope="col">Пользователь</th>
-                <th scope="col">Статус</th>
-                <th scope="col">Сумма</th>
-                <th scope="col">&nbsp;</th>
-            </tr>
-        </thead>
-        <tbody>
-        <? foreach($list as $item) { ?>
-        <tr>
-            <td class="align-middle"><?=$item->isDeleted()?'<del>':''?><?=$item->getUser()->getName()? htmlspecialchars($item->getUser()->getName()) : htmlspecialchars($item->getUser()->getEmail())?><?=$item->isDeleted()?'</del>':''?></td>
-            <td class="align-middle">
-                <span class="text-<?=$item->getStatus()->getId()==CreditRequestStatus::TYPE_INCOME?'danger':($item->getStatus()->getId()==CreditRequestStatus::TYPE_CONCIDERED?'warning': (in_array($item->getStatus()->getId(), array(CreditRequestStatus::TYPE_APPROVE, CreditRequestStatus::TYPE_CONFIRM, CreditRequestStatus::TYPE_SUCCESS))?'success': ($item->getStatus()->getId()==CreditRequestStatus::TYPE_REJECT?'secondary' : 'dark') ) )?>"><?=$item->getStatus()->getName()?></span>
-            </td>
-            <td class="align-middle"><?=$item->isDeleted()?'<del>':''?><a href="<?=CommonUtils::makeUrl('creditRequestEditor', array('action' => creditRequestEditor::ACTION_VIEW, 'id' => $item->getId(), 'return' => $curl))?>"><?=htmlspecialchars($item->getName())?> / <?=htmlspecialchars($item->getCategory()->getName())?> / <?=number_format($item->getSumm(), 0, '.', '&nbsp;').'&#8381;'?></a><?=$item->isDeleted()?'</del>':''?></td>
-            <td class="align-middle">
-                <? if ($item->checkPermissions(AclAction::RESTORE_ACTION)) { ?><a href="<?=CommonUtils::makeUrl('creditRequestEditor', array('action' => CommandContainer::ACTION_RESTORE, 'id' => $item->getId(), 'return' => $curl))?>"><i class="fas fa-undo-alt"></i></a><? } ?>
-            </td>
-        </tr>
-        <? } ?>
-        </tbody>
-        </table>
-    </div>
-    <? } else { ?>
+            if ($result->getCount() > $onPage) {
+                viewPagerHelper::create($result->getCount())->setModule($area)->setPage($form->getValueOrDefault('page'))->setPerPage($onPage)->setParams($filter)->setPartViewer($partViewer)->dump();
+            }
+    ?>     
+        <form action="" method="get" id="filter-form">      
+            <? 
+                if ($form->getValue('user')) { 
+                    foreach($form->exportValue('user') as $userId) { 
+            ?>
+                        <input type="hidden" name="user[]" value="<?=$userId?>" />
+            <?      
+                    }
+                }
+            ?>
+            <input type="hidden" name="sort" value="<?=$form->getValueOrDefault('sort')?>" />
+            <input type="hidden" name="d" value="<?=$form->getValueOrDefault('d')?>" />
+            <input type="hidden" name="page" value="<?=$form->getValueOrDefault('page')?>" />
+            <div class="table-responsive">
+                <table class="table table-hover table-striped">
+                <thead>
+                    <tr>
+                        <th scope="col" class="align-middle"><a href="<?=CommonUtils::makeUrl($area, array_merge($filter, array("sort" => "id", "d" => $form->getValueOrDefault('d') == "asc" ? "desc" : "asc")))?>">Дата <i class="fas fa-sort-numeric-<?=$form->getValueOrDefault('d') == "asc"?'up':'down-alt'?>"></i></a></th>
+                        <th scope="col" class="align-middle">Пользователь</th>
+                        <th scope="col" class="align-middle text-center">
+                            <select class="selectpicker" name="status[]" multiple data-selected-text-format="count" data-none-selected-text="статус">
+                                <? foreach(CreditRequestStatus::getList(CreditRequestStatus::create(CreditRequestStatus::getAnyId())) as $status) { ?>
+                                    <option value="<?=$status->getId()?>"<?=$form->getValue('status') && in_array($status->getId(), $form->exportValue('status'))?' selected':''?>><?=htmlspecialchars($status->getName())?></option>
+                                <? } ?>
+                            </select>
+                        </th>
+                        <th scope="col" class="align-middle text-center">
+                            <select class="selectpicker" name="type[]" multiple data-selected-text-format="count" data-none-selected-text="заемщик" data-width="125px">
+                                <? foreach(SubjectType::getList(SubjectType::create(SubjectType::getAnyId())) as $type) { ?>
+                                    <option value="<?=$type->getId()?>"<?=$form->getValue('type') && in_array($type->getId(), $form->exportValue('type'))?' selected':''?>><?=htmlspecialchars($type->getShortName())?></option>
+                                <? } ?>
+                            </select>
+                            <select class="selectpicker" name="category[]" multiple data-selected-text-format="count" data-none-selected-text="тип залога">
+                                <? foreach($categories as $category) { ?>
+                                    <option value="<?=$category->getId()?>"<?=$form->getValue('category') && in_array($category->getId(), $form->exportValue('category'))?' selected':''?>><?=htmlspecialchars($category->getName())?></option>
+                                <? } ?>
+                            </select>
+                        </th>
+                        <th scope="col" class="align-middle">
+                            <select class="selectpicker" name="delete" data-none-selected-text="&nbsp;" data-width="75px">
+                                <option value="-1"<?=$form->getValueOrDefault('delete') == -1 ?' selected':''?> data-icon="far fa-trash-alt">&nbsp;</option>
+                                <option value="0"<?=$form->getValueOrDefault('delete') == 0 ?' selected':''?>>все</option>
+                                <option value="1"<?=$form->getValueOrDefault('delete') == 1 ?' selected':''?> data-icon="fas fa-trash-alt">&nbsp;</option>
+                            </select>                            
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                <? foreach($result->getList() as $item) { ?>
+                <tr>
+                    <td class="align-middle text-nowrap"><?=ViewTextUtils::humanizeDate($item->getCreatedTime())?></td>
+                    <td class="align-middle"><?=$item->isDeleted()?'<del>':''?><?=$item->getUser()->getName()? htmlspecialchars($item->getUser()->getName()) : htmlspecialchars($item->getUser()->getEmail())?><?=$item->isDeleted()?'</del>':''?></td>
+                    <td class="align-middle text-center">
+                        <span class="text-<?=$item->getStatus()->getId()==CreditRequestStatus::TYPE_INCOME?'danger':($item->getStatus()->getId()==CreditRequestStatus::TYPE_CONCIDERED?'warning': (in_array($item->getStatus()->getId(), array(CreditRequestStatus::TYPE_APPROVE, CreditRequestStatus::TYPE_CONFIRM, CreditRequestStatus::TYPE_SUCCESS))?'success': ($item->getStatus()->getId()==CreditRequestStatus::TYPE_REJECT?'secondary' : 'dark') ) )?>"><?=$item->getStatus()->getName()?></span>
+                    </td>
+                    <td class="align-middle"><?=$item->isDeleted()?'<del>':''?><a href="<?=CommonUtils::makeUrl('creditRequestEditor', array('action' => creditRequestEditor::ACTION_VIEW, 'id' => $item->getId(), 'return' => $curl))?>"><?=htmlspecialchars($item->getName())?> / <?=htmlspecialchars($item->getCategory()->getName())?> / <?=number_format($item->getSumm(), 0, '.', '&nbsp;').'&#8381;'?></a><?=$item->isDeleted()?'</del>':''?></td>
+                    <td class="align-middle text-center">
+                        <? if ($item->checkPermissions(AclAction::RESTORE_ACTION)) { ?><a href="<?=CommonUtils::makeUrl('creditRequestEditor', array('action' => CommandContainer::ACTION_RESTORE, 'id' => $item->getId(), 'return' => $curl))?>"><i class="fas fa-undo-alt"></i></a><? } ?>
+                    </td>
+                </tr>
+                <? } ?>
+                </tbody>
+                </table>
+            </div>
+        </form>
+    <?
+    
+            if ($result->getCount() > $onPage) {
+                viewPagerHelper::create($result->getCount())->setModule($area)->setPage($form->getValueOrDefault('page'))->setPerPage($onPage)->setParams($filter)->setPartViewer($partViewer)->dump();
+            }
+            
+        } else { 
+    ?>
         <div class="card">
           <div class="card-body">
             <p class="my-4 text-center">еще ничего не добавлено&hellip;</p>
+            <? if ($filter) { ?><p class="my-4 text-center"><a href="<?=CommonUtils::makeUrl($area)?>">сбросить фильтр</a></p><? } ?>
           </div>
         </div>    
     <? } ?>
