--- a/src/admin/templates/investorOfferList.tpl.html
+++ b/src/admin/templates/investorOfferList.tpl.html
@@ -10,44 +10,92 @@
         </ol>
     </nav>
     
-    <? if ($list) { ?>
-    <div class="table-responsive">
-        <table class="table table-hover table-striped">
-        <thead>
-            <tr>
-                <th scope="col">Пользователь</th>
-                <th scope="col">Статус и Сумма</th>
-                <th scope="col">Срок</th>
-                <th scope="col">Условия</th>
-                <th scope="col">&nbsp;</th>
-            </tr>
-        </thead>
-        <tbody>
-        <? foreach($list as $item) { ?>
-        <tr<?=$item->isActive()?'':' class="table-warning"'?>>
-            <td class="align-middle"><?=$item->isDeleted()?'<del>':''?><?=$item->getUser()->getName()? htmlspecialchars($item->getUser()->getName()) : htmlspecialchars($item->getUser()->getEmail())?><?=$item->isDeleted()?'</del>':''?></td>
-            <td class="align-middle"><?=$item->isDeleted()?'<del>':''?><abbr title="<?=$item->getType()->getName()?>"><?=$item->getType()->getShortName()?></abbr> <?=$item->getMinSumm()? number_format($item->getMinSumm(), 0, '.', '&nbsp;').'&#8381; &ndash; ' : 'до '?><?=number_format($item->getMaxSumm(), 0, '.', '&nbsp;').'&#8381;'?><?=$item->isDeleted()?'</del>':''?></td>
-            <td class="align-middle"><?=$item->isDeleted()?'<del>':''?>
-                <?=$item->getMinPeriod() ? ($item->getMaxPeriod() ? "{$item->getMinPeriod()}-{$item->getMaxPeriod()} мес" : "от {$item->getMinPeriod()} мес") : ($item->getMaxPeriod() ? "до {$item->getMaxPeriod()} мес" : "любой") ?>
-                <?=$item->isDeleted()?'</del>':''?>
-            </td>
-            <td class="align-middle"><?=$item->isDeleted()?'<del>':''?><?=sprintf("%0.2f", $item->getPercents())?>% в мес<?=$item->isDeleted()?'</del>':''?></td>
-            <td class="align-middle">
-                <? if ($item->checkPermissions(AclAction::PUBLISH_ACTION)) { ?><a href="<?=CommonUtils::makeUrl('investorOfferEditor', array('action' => investorOfferEditor::ACTION_PUBLISH, 'id' => $item->getId(), 'return' => $curl))?>"><i class="fas fa-check"></i></a><? } ?>
-                <? if ($item->checkPermissions(AclAction::DELETE_ACTION)) { ?><a href="<?=CommonUtils::makeUrl('investorOfferEditor', array('action' => CommandContainer::ACTION_DELETE, 'id' => $item->getId(), 'return' => $curl), PATH_WEB_INVESTOR)?>"><i class="far fa-trash-alt"></i></a><? } ?>
-                <? if ($item->checkPermissions(AclAction::RESTORE_ACTION)) { ?><a href="<?=CommonUtils::makeUrl('investorOfferEditor', array('action' => CommandContainer::ACTION_RESTORE, 'id' => $item->getId(), 'return' => $curl))?>"><i class="fas fa-undo-alt"></i></a><? } ?>
-            </td>
-        </tr>
-        <? } ?>
-        </tbody>
-        </table>
-    </div>
-    <? } else { ?>
+    <? 
+        if ($result->getCount() > 0) {
+    
+            if ($result->getCount() > $onPage) {
+                viewPagerHelper::create($result->getCount())->setModule($area)->setPage($form->getValueOrDefault('page'))->setPerPage($onPage)->setParams($filter)->setPartViewer($partViewer)->dump();
+            }
+    ?>     
+        <form action="" method="get" id="filter-form">   
+            <? 
+                if ($form->getValue('user')) { 
+                    foreach($form->exportValue('user') as $userId) { 
+            ?>
+                        <input type="hidden" name="user[]" value="<?=$userId?>" />
+            <?      
+                    }
+                }
+            ?>
+            <input type="hidden" name="sort" value="<?=$form->getValueOrDefault('sort')?>" />
+            <input type="hidden" name="d" value="<?=$form->getValueOrDefault('d')?>" />
+            <input type="hidden" name="page" value="<?=$form->getValueOrDefault('page')?>" />
+            
+            <div class="table-responsive">
+                <table class="table table-hover table-striped">
+                <thead>
+                    <tr>
+                        <th scope="col" class="align-middle"><a href="<?=CommonUtils::makeUrl($area, array_merge($filter, array("sort" => "id", "d" => $form->getValueOrDefault('d') == "asc" ? "desc" : "asc")))?>">Дата <i class="fas fa-sort-numeric-<?=$form->getValueOrDefault('d') == "asc"?'up':'down-alt'?>"></i></a></th>
+                        <th scope="col">Пользователь</th>
+                        <th scope="col">
+                            <select class="selectpicker" name="type[]" multiple data-selected-text-format="count" data-none-selected-text="заемщик" data-width="125px">
+                                <? foreach(SubjectType::getList(SubjectType::create(SubjectType::getAnyId())) as $type) { ?>
+                                    <option value="<?=$type->getId()?>"<?=$form->getValue('type') && in_array($type->getId(), $form->exportValue('type'))?' selected':''?>><?=htmlspecialchars($type->getShortName())?></option>
+                                <? } ?>
+                            </select> и Сумма
+                        </th>
+                        <th scope="col">Срок</th>
+                        <th scope="col">Условия</th>
+                        <th scope="col">
+                            <select class="selectpicker" name="active" data-none-selected-text="&nbsp;" data-width="75px">
+                                <option value="-1"<?=$form->getValueOrDefault('active') == -1 ?' selected':''?> data-icon="far fa-circle">&nbsp;</option>
+                                <option value="0"<?=$form->getValueOrDefault('active') == 0 ?' selected':''?>>все</option>
+                                <option value="1"<?=$form->getValueOrDefault('active') == 1 ?' selected':''?> data-icon="far fa-check-circle">&nbsp;</option>
+                            </select>
+                            <select class="selectpicker" name="delete" data-none-selected-text="&nbsp;" data-width="75px">
+                                <option value="-1"<?=$form->getValueOrDefault('delete') == -1 ?' selected':''?> data-icon="far fa-trash-alt">&nbsp;</option>
+                                <option value="0"<?=$form->getValueOrDefault('delete') == 0 ?' selected':''?>>все</option>
+                                <option value="1"<?=$form->getValueOrDefault('delete') == 1 ?' selected':''?> data-icon="fas fa-trash-alt">&nbsp;</option>
+                            </select>     
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                <? foreach($result->getList() as $item) { ?>
+                    <tr<?=$item->isActive()?'':' class="table-warning"'?>>
+                        <td class="align-middle text-nowrap"><?=ViewTextUtils::humanizeDate($item->getCreatedTime())?></td>
+                        <td class="align-middle"><?=$item->isDeleted()?'<del>':''?><?=$item->getUser()->getName()? htmlspecialchars($item->getUser()->getName()) : htmlspecialchars($item->getUser()->getEmail())?><?=$item->isDeleted()?'</del>':''?></td>
+                        <td class="align-middle"><?=$item->isDeleted()?'<del>':''?><abbr title="<?=$item->getType()->getName()?>"><?=$item->getType()->getShortName()?></abbr> <?=$item->getMinSumm()? number_format($item->getMinSumm(), 0, '.', '&nbsp;').'&#8381; &ndash; ' : 'до '?><?=number_format($item->getMaxSumm(), 0, '.', '&nbsp;').'&#8381;'?><?=$item->isDeleted()?'</del>':''?></td>
+                        <td class="align-middle"><?=$item->isDeleted()?'<del>':''?>
+                            <?=$item->getMinPeriod() ? ($item->getMaxPeriod() ? "{$item->getMinPeriod()}-{$item->getMaxPeriod()} мес" : "от {$item->getMinPeriod()} мес") : ($item->getMaxPeriod() ? "до {$item->getMaxPeriod()} мес" : "любой") ?>
+                            <?=$item->isDeleted()?'</del>':''?>
+                        </td>
+                        <td class="align-middle"><?=$item->isDeleted()?'<del>':''?><?=sprintf("%0.2f", $item->getPercents())?>% в мес<?=$item->isDeleted()?'</del>':''?></td>
+                        <td class="align-middle text-center">
+                            <? if ($item->checkPermissions(AclAction::PUBLISH_ACTION)) { ?><a href="<?=CommonUtils::makeUrl('investorOfferEditor', array('action' => investorOfferEditor::ACTION_PUBLISH, 'id' => $item->getId(), 'return' => $curl))?>"><i class="fas fa-check"></i></a><? } ?>
+                            <? if ($item->checkPermissions(AclAction::DELETE_ACTION)) { ?><a href="<?=CommonUtils::makeUrl('investorOfferEditor', array('action' => CommandContainer::ACTION_DELETE, 'id' => $item->getId(), 'return' => $curl), PATH_WEB_INVESTOR)?>"><i class="far fa-trash-alt"></i></a><? } ?>
+                            <? if ($item->checkPermissions(AclAction::RESTORE_ACTION)) { ?><a href="<?=CommonUtils::makeUrl('investorOfferEditor', array('action' => CommandContainer::ACTION_RESTORE, 'id' => $item->getId(), 'return' => $curl))?>"><i class="fas fa-undo-alt"></i></a><? } ?>
+                        </td>
+                    </tr>
+                <? } ?>
+                </tbody>
+                </table>
+            </div>
+        </form>
+    <?
+    
+            if ($result->getCount() > $onPage) {
+                viewPagerHelper::create($result->getCount())->setModule($area)->setPage($form->getValueOrDefault('page'))->setPerPage($onPage)->setParams($filter)->setPartViewer($partViewer)->dump();
+            }
+            
+        } else { 
+    ?>
         <div class="card">
           <div class="card-body">
             <p class="my-4 text-center">еще ничего не добавлено&hellip;</p>
-          </div>
-        </div>    
+            <? if ($filter) { ?><p class="my-4 text-center"><a href="<?=CommonUtils::makeUrl($area)?>">сбросить фильтр</a></p><? } ?>
+            </div>
+          </div>    
     <? } ?>
     
 </main>  
