--- a/src/admin/templates/userList.tpl.html
+++ b/src/admin/templates/userList.tpl.html
@@ -10,39 +10,60 @@
         </ol>
     </nav>
     
-    <? if ($list) { ?>
-    <div class="table-responsive">
-        <table class="table table-hover table-striped">
-        <thead>
-            <tr>
-                <th scope="col">Логин</th>
-                <th scope="col">Email</th>
-                <th scope="col">Телефон</th>
-                <? if (SecurityManager::isAllowedAction(AclAction::EDIT_ACTION, AclContext::USER_ID)) { ?><th scope="col">&nbsp;</th><? } ?>
-            </tr>
-        </thead>
-        <tbody>
-        <? foreach($list as $item) { ?>
-        <tr>
-            <td class="align-middle"><?=$item->isBan()?'<del>':''?><?=htmlspecialchars($item->getName())?><?=$item->isBan()?'</del>':''?></td>
-            <td class="align-middle"><?=$item->isBan()?'<del>':''?><?=htmlspecialchars($item->getEmail())?><?=$item->isBan()?'</del>':''?></td>
-            <td class="align-middle"><?=$item->isBan()?'<del>':''?><?=preg_replace("/^(\d{3})(\d{3})(\d{2})(\d{2})$/isu", "+7&nbsp;(\\1)&nbsp;\\2-\\3-\\4", $item->getPhone())?><?=$item->isBan()?'</del>':''?></td>
-            <? if (SecurityManager::isAllowedAction(AclAction::EDIT_ACTION, AclContext::USER_ID)) { ?>
-                <td class="align-middle">
-                    <? if (SecurityManager::isAllowedAction(AclAction::EDIT_ACTION, AclContext::USER_ID)) { ?><a href="<?=CommonUtils::makeUrl('userEditor', array('action' => CommandContainer::ACTION_UPDATE, 'id' => $item->getId(), 'return' => $curl))?>"><i class="far fa-edit"></i></a><? } ?>
-                </td>
-            <? } ?>
-        </tr>
-        <? } ?>
-        </tbody>
-        </table>
-    </div>
-    <? } else { ?>
+    <? 
+        if ($result->getCount() > 0) {
+    
+            if ($result->getCount() > $onPage) {
+                viewPagerHelper::create($result->getCount())->setModule($area)->setPage($form->getValueOrDefault('page'))->setPerPage($onPage)->setParams($filter)->setPartViewer($partViewer)->dump();
+            }
+    ?>     
+        <form action="" method="get" id="filter-form">
+            <input type="hidden" name="sort" value="<?=$form->getValueOrDefault('sort')?>" />
+            <input type="hidden" name="d" value="<?=$form->getValueOrDefault('d')?>" />
+            <input type="hidden" name="page" value="<?=$form->getValueOrDefault('page')?>" />
+            <div class="table-responsive">
+                <table class="table table-hover table-striped">
+                <thead>
+                    <tr>
+                        <th scope="col" class="align-middle"><a href="<?=CommonUtils::makeUrl($area, array_merge($filter, array("sort" => "id", "d" => $form->getValueOrDefault('d') == "asc" ? "desc" : "asc")))?>">Дата <i class="fas fa-sort-numeric-<?=$form->getValueOrDefault('d') == "asc"?'up':'down-alt'?>"></i></a></th>
+                        <th scope="col">Логин</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">Телефон</th>
+                        <? if (SecurityManager::isAllowedAction(AclAction::EDIT_ACTION, AclContext::USER_ID)) { ?><th scope="col">&nbsp;</th><? } ?>
+                    </tr>
+                </thead>
+                <tbody>
+                <? foreach($result->getList() as $item) { ?>
+                <tr>
+                    <td class="align-middle text-nowrap"><?=ViewTextUtils::humanizeDate($item->getCreatedTime())?></td>
+                    <td class="align-middle"><?=$item->isBan()?'<del>':''?><?=htmlspecialchars($item->getName())?><?=$item->isBan()?'</del>':''?></td>
+                    <td class="align-middle"><?=$item->isBan()?'<del>':''?><?=htmlspecialchars($item->getEmail())?><?=$item->isBan()?'</del>':''?></td>
+                    <td class="align-middle"><?=$item->isBan()?'<del>':''?><?=preg_replace("/^(\d{3})(\d{3})(\d{2})(\d{2})$/isu", "+7&nbsp;(\\1)&nbsp;\\2-\\3-\\4", $item->getPhone())?><?=$item->isBan()?'</del>':''?></td>
+                    <? if (SecurityManager::isAllowedAction(AclAction::EDIT_ACTION, AclContext::USER_ID)) { ?>
+                        <td class="align-middle">
+                            <? if (SecurityManager::isAllowedAction(AclAction::EDIT_ACTION, AclContext::USER_ID)) { ?><a href="<?=CommonUtils::makeUrl('userEditor', array('action' => CommandContainer::ACTION_UPDATE, 'id' => $item->getId(), 'return' => $curl))?>"><i class="far fa-edit"></i></a><? } ?>
+                        </td>
+                    <? } ?>
+                </tr>
+                <? } ?>
+                </tbody>
+                </table>
+            </div>
+        </form>
+    <?
+    
+            if ($result->getCount() > $onPage) {
+                viewPagerHelper::create($result->getCount())->setModule($area)->setPage($form->getValueOrDefault('page'))->setPerPage($onPage)->setParams($filter)->setPartViewer($partViewer)->dump();
+            }
+            
+        } else { 
+    ?>
         <div class="card">
           <div class="card-body">
             <p class="my-4 text-center">еще ничего не добавлено&hellip;</p>
-          </div>
-        </div>    
+            <? if ($filter) { ?><p class="my-4 text-center"><a href="<?=CommonUtils::makeUrl($area)?>">сбросить фильтр</a></p><? } ?>
+            </div>
+          </div>    
     <? } ?>
     
 </main>  
