--- a/src/base/main.scss
+++ b/src/base/main.scss
@@ -9,6 +9,14 @@
 input::-webkit-outer-spin-button, input::-webkit-inner-spin-button { -webkit-appearance: none; margin: 0; }
 input[type=number] { -moz-appearance:textfield; }
 
+.ajax-href { border-bottom: 1px dashed; cursor: pointer; }
+
+.pagination-resp {
+    @include media-breakpoint-down(sm) {
+        @include pagination-size($pagination-padding-y-sm, $pagination-padding-x-sm, $font-size-sm, $line-height-sm, $border-radius-sm);
+    }
+}
+
 html { 
     body { 
         
@@ -18,6 +26,54 @@ html {
         .ui-sortable-helper { background-color: white; }
         .ui-state-highlight { background-color: whitesmoke; }
         .ui-sortable .handle { cursor: move; }    
+    
+        #related-images, .preview-row {
+
+            .image-cont-placeholder {
+                background-size: cover;
+                background-repeat: no-repeat;
+                background-color: whitesmoke;
+                width: block;
+                flex: none;
+                width: 150px;
+                height: 150px;
+                border: 1px dashed lightgray;
+            }
+
+            .card {
+                background-size: cover;
+                background-repeat: no-repeat;
+                width: block;
+                flex: none;
+                width: 150px;
+                height: 150px;
+
+                .card-block {
+                    display: flex; 
+                    flex-direction: row; 
+                    padding: 1rem 0.25rem;
+                    background-color: rgba(220,220,220,0.6);
+                    visibility: hidden;
+
+                    i.fa {
+                        flex: auto; 
+                        display: flex; 
+                        justify-content: center; 
+                        cursor: pointer;
+                    }
+                }
+            }
+
+            .card:hover {
+                .card-block {
+                    visibility: visible;
+                }
+            }
+
+            @include media-breakpoint-down(sm) {
+                .card .card-block { visibility: visible; }
+            }
+        }        
     }
     
 }
